styles/sections/featured-collection.css
.featured-collection-slider {
  @apply hidden;

  &.active {
    @apply block;
  }

  & > div {
    &:not(.splide) {
      & .splide__list {
        @apply flex-wrap;
      }
    }
  }
}

/* .align-left {
  @apply text-left;
}

.align-center {
  @apply text-center;
}

.align-right {
  @apply text-right;
} */

#collection-tab-container {
  text-align: center;
  margin: auto;
  padding-bottom: 20px;
}

.collection-tab-btn {
  @apply bg-scheme-fg my-1;
}

.featured-collection-divider {
  height: 1px;
  border: none;
  color: #000;
  background-color: #000;
  width: 140px;
  text-align: center;
  margin: 0 auto 2rem;
}

.featured-collection-slider .slider-buttons {
  display: none;
}

.featured-collection-slider .title-wrapper {
  margin-bottom: 1.2rem;
}

.featured-collection-slider .title-wrapper h2 {
  font-size: 34px;
  font-weight: 700;
  line-height: 46px;
  letter-spacing: 1px;
  margin-bottom: 1rem;
}

